--- a/themes/audi/assets/sass/modules/mixins.scss
+++ b/themes/audi/assets/sass/modules/mixins.scss
@@ -62,3 +62,13 @@
   -o-transition: $args;
   transition: $args;
 }
+
+// ==============================
+// Auto prefixer
+// ==============================
+@mixin crossBrowser($property, $css) {
+  -webkit-#{$property}: $css;
+  -moz-#{$property}: $css;
+  -o-#{$property}: $css;
+  #{$property}: $css;
+}
