--- a/themes/audi/style.css
+++ b/themes/audi/style.css
@@ -1,9 +1,9 @@
 /*
 	Theme Name: Audi
-	Theme URI: https://www.audi.com
+	Theme URI: www.linkedin.com/in/vedranbe
 	Description: Audi WordPress Theme
 	Version: 1.0
 	Author: Vedran Bejatovic
-	Tags: Responsive, HTML5, CSS3
+	Tags: Responsive, HTML5, CSS3, jQuery
 
 */
