--- a/themes/audi/assets/sass/style.scss
+++ b/themes/audi/assets/sass/style.scss
@@ -619,15 +619,15 @@ section {
   &#other_cars {
     text-align: center;
     .inner {
-      border: 1px solid #f3f3f5;
-      @include crossBrowser(border-radius, 3px);
+      border: 1px solid #ddd;
+      @include crossBrowser(border-radius, 10px);
       padding: 10px 20px;
       float: left;
       width: 100%;
       margin-top: 20px;
       &:hover {
         @include transition(all 0.5s ease);
-        @include crossBrowser(box-shadow, 0px 0px 25px 0px rgba(0, 0, 0, 0.1));
+        @include crossBrowser(box-shadow, 0px 0px 25px 0px rgba(0, 0, 0, 0.25)); 
 
         .buy {
           a {
